--- a/springboot_01/src/main/resources/application.yml
+++ b/springboot_01/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   #数据库连接配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/gz?serverTimezone=UTC&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/miaosha?serverTimezone=UTC&characterEncoding=utf-8&useSSL=false
     username: root
     password: 123456
   mvc:
